k3s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
    spec:
      containers:
        - image: monachus/rancher-demo:latest
          name: rancher-demo
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
